--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <meta name="twitter:title" content="CheckMyGitHub - AI-Powered Repository Scanner" />
     <meta name="twitter:description" content="Scan your GitHub repositories for security vulnerabilities and best practices using our AI-powered analysis tool." />
     <meta name="twitter:image" content="/lovable-uploads/7c82dcfe-77c6-45bb-abc7-316a4a03c0ec.png" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4JZ62PL0TG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-4JZ62PL0TG');
+    </script>
   </head>
 
   <body>
